# fl1tzi.com

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  index-634e659bf40307b3.css  index.css  index.html  tgerber-net-wasm-e88ff03ca911de80.js  tgerber-net-wasm-e88ff03ca911de80_bg.wasm
.github/workflows/: deploy_wasm.yml
assets/: GitHub-LICENSE  codeberg-LICENSE
aufgaben/: calendar.css  calendar.js  index.html  index.js
pkg/: README.md  package.json  tgerber_net_wasm.d.ts  tgerber_net_wasm.js  tgerber_net_wasm_bg.js  tgerber_net_wasm_bg.wasm  tgerber_net_wasm_bg.wasm.d.ts
posts/: pyscript-info.md
proc_macro_markdown/: Cargo.toml
proc_macro_markdown/src/: lib.rs
src/: lib.rs  post_data.rs
