[package]
name = "tgerber-net-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-bindgen = "^0.2.0"
web-sys = { version = "^0.3.59", features = ["CssStyleDeclaration", "Element", "Window"]}
# for requests
gloo-utils = "0.1.5"
yew-router = "0.16"

[lib]
crate-type = ["cdylib", "rlib"]
